tambah footer.html

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,12 +1,12 @@
-<footer>
+<footer class="reveal">
     <!-- Footer halaman -->
     <div class="footer_container">
         <div class="footer_items">
             <h3>Follow me</h3>
-            <a target="_blank" href="https://pandaijaringan.com"><i class="fa-solid fa-globe"></i> pandaijaringan.com</a> 
+            <a target="_blank" href="https://pandaijaringan.github.io"><i class="fa-solid fa-globe"></i> pandaijaringan.com</a> 
             <a target="_blank" href="https://github.com/Pandaijaringan"><i class="fa-brands fa-github icon"></i> Pandaijaringan</a>
-            <a target="_blank" href="https://www.instagram.com/imadepandesagunaarta/"><img class="icon" src="<?=$url?>img/instagram.png" alt="insatagram"> imadepandesagunaarta</a>
-            <a target="_blank" href="https://www.tiktok.com/@pandesaguna169?_t=ZS-8xFjCJ2P1V3&_r=1"><img src="<?=$url?>img/tiktok.png" alt="tiktok" class="icon"> @pandesaguna169</a>
+            <a target="_blank" href="https://www.instagram.com/imadepandesagunaarta/"><img class="icon" src="img/instagram.png" alt="insatagram"> imadepandesagunaarta</a>
+            <a target="_blank" href="https://www.tiktok.com/@pandesaguna169?_t=ZS-8xFjCJ2P1V3&_r=1"><img src="img/tiktok.png" alt="tiktok" class="icon"> @pandesaguna169</a>
         </div>
         <div class="footer_items">
             <h3>Kategori artikel</h3>
@@ -23,6 +23,6 @@
     </div>
     <h5 class="copyright">Copyright &copy; 2025 pandaijaringan.com</h5>
 </footer>
-<script src="<?=$url?>script.js"></script>
+<script src="https://pandaijaringan.github.io/script.js"></script>
 </body>
 </html>
