hapus clas reveal footer html

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="reveal">
+<footer>
     <!-- Footer halaman -->
     <div class="footer_container">
         <div class="footer_items">
