--- a/includes/footer.html
+++ b/includes/footer.html
@@ -5,8 +5,8 @@
             <h3>Follow me</h3>
             <a target="_blank" href="https://pandaijaringan.github.io"><i class="fa-solid fa-globe"></i> pandaijaringan.com</a> 
             <a target="_blank" href="https://github.com/Pandaijaringan"><i class="fa-brands fa-github icon"></i> Pandaijaringan</a>
-            <a target="_blank" href="https://www.instagram.com/imadepandesagunaarta/"><img class="icon" src="img/instagram.png" alt="insatagram"> imadepandesagunaarta</a>
-            <a target="_blank" href="https://www.tiktok.com/@pandesaguna169?_t=ZS-8xFjCJ2P1V3&_r=1"><img src="img/tiktok.png" alt="tiktok" class="icon"> @pandesaguna169</a>
+            <a target="_blank" href="https://www.instagram.com/imadepandesagunaarta/"><img class="icon" src="https://pandaijaringan.github.io/img/instagram.png" alt="insatagram"> imadepandesagunaarta</a>
+            <a target="_blank" href="https://www.tiktok.com/@pandesaguna169?_t=ZS-8xFjCJ2P1V3&_r=1"><img src="https://pandaijaringan.github.io/img/tiktok.png" alt="tiktok" class="icon"> @pandesaguna169</a>
         </div>
         <div class="footer_items">
             <h3>Kategori artikel</h3>
