--- a/includes/header.html
+++ b/includes/header.html
@@ -30,7 +30,7 @@
         <i class="ph ph-list"></i>
         </div>
         <ul id="navbar" class=""> 
-            <li class="navbar-items"><a href="#Beranda">Beranda</a></li>
+            <li class="navbar-items"><a href="https://pandaijaringan.github.io">Beranda</a></li>
             <!-- Dropdown artikel -->
             <li class="navbar-items p-relative"><p>Artikel</p> <ul class="dropdown hidden"> 
                 <li class="navbar-items"><a href="#artikel">Semua artikel</a></li>
@@ -44,7 +44,7 @@
                 <li class="navbar-items"><a href=".artikel">Mikrotik</a></li>
                 <li class="navbar-items"><a href="">Tutorial lainnya</a></li>
             </ul></li>
-            <li class="navbar-items"><a href="">Tips &amp; trick</a></li>
+            <li class="navbar-items"><a href="#">Tips &amp; trick</a></li>
             <li class="navbar-items"><a href="#tentang">Tentang</a></li>
             <li class="navbar_items" id="dark"><i class="ph ph-moon"></i></li>
         </ul>
