--- a/includes/header.html
+++ b/includes/header.html
@@ -19,6 +19,9 @@
 </head>
 <body>
     <header>
+        <div class="loading">
+      <img src="img/loading.gif" alt="loading">
+    </div>
         <!-- Navigation Bar -->
         <nav>
             <div class="judul-web">
