--- a/includes/header.html
+++ b/includes/header.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="loading">
-      <img src="img/loading.gif" alt="loading">
+      <img src="https://pandaijaringan.github.io/img/loading.gif" alt="loading">
     </div>
         <!-- Navigation Bar -->
         <nav>
